test/sema/traits/trait_list_non_conforming_type_arg_generic_fn.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait Base<T> {}

struct B<T> {
    impl Base<T>;
}

trait A<T, U : Base<T>> {}

fn foo<T : A<number, B<unit>>>() {}
// CHECK: [[# @LINE - 1]]:22: error: cannot unify 'unit' with 'number'
// CHECK: [[# @LINE - 2]]:22: error: cannot satisfy constraint 'B<unit> : Base<number>'

fn main() {}
